# give_money_bot

./: .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  config.py  db_connector.py  docker-compose.yaml  keyboards.py  main.py  my_state.py  mypy.ini  parser  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  deploy.yml  docker.yml  main.yml  release.yml
additional_stuff/: Lex.hi  Lex.hs  Synt.hi  Synt.hs  Synt.y  parser  parser.hi  parser.hs
bot/: bot.py  keyboards.py
db/: db_connector.py  models.py
db/migrate/: env.py
db/migrate/versions/: 261a0dd175e8_init.py
docker/: docker-compose.yml  docker-entrypoint.sh  run.py  update.sh
give_money_bot/: __init__.py  __main__.py  bot.py  config.py
give_money_bot/admin/: dispatcher.py
give_money_bot/credits/: callback.py  callback_data.py  dispatcher.py  keyboards.py  squeezer.py  states.py  strings.py  utils.py
give_money_bot/db/: crud.py  db_connector.py  models.py
give_money_bot/db/migrate/: env.py  script.py.mako
give_money_bot/db/migrate/versions/: 2022_092123_36128b8403ca_create_indexes.py  2022_100114_a10a12ae6839_add_friends_and_more_info_to_user.py  261a0dd175e8_init.py  475aa5c976a6_add_more_info_to_users.py  711669486eee_add_users_tabel.py  9ea314271a27_add_discount.py  a9f779086e6c_add_show_users.py  d6f21c02a1c9_add_user_substitution.py  e5a51715598b_move_user_vision_to_new_table.py
give_money_bot/friends/: callback.py  dispatcher.py  keyboards.py  states.py  strings.py
give_money_bot/settings/: callback.py  dispatcher.py  keyboards.py  states.py  strings.py
give_money_bot/tg_bot/: bot.py  callback_data.py  keyboards.py  strings.py  utils.py
give_money_bot/utils/: log.py  middlewares.py  misc.py  prometheus_middleware.py  squeezer.py  strings.py
give_money_bot/web/: route.py
tests/: test_parser.py
utils/: log.py
