[tool.poetry]
name = "give_money_bot"
version = "0.1.0"
description = ""
authors = ["Platun0v <me@platun0v.ru>"]

[tool.poetry.scripts]
bot = "give_money_bot.tg_bot.bot:main"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
aiogram = "^2.11.2"
typing-extensions = "^3.7.4"
aiohttp-socks = "^0.6.0"
loguru = "^0.5.3"
SQLAlchemy = "^1.3.23"
alembic = "^1.5.6"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
sqlalchemy-stubs = "^0.4"

[mypy]
plugins = ["sqlmypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
