[tool.poetry]
name = "give_money_bot"
version = "0.1.0"
description = ""
authors = ["Platun0v <me@platun0v.ru>"]

[tool.poetry.scripts]
bot = "give_money_bot.tg_bot.bot:main"
squeeze = "give_money_bot.utils.squeezer:squeeze"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
aiogram = "^2.11.2"
typing-extensions = "^3.7.4"
aiohttp-socks = "^0.6.0"
loguru = "^0.6.0"
SQLAlchemy = "^1.3.23"
alembic = "^1.5.6"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.920"
sqlalchemy-stubs = "^0.4"
black = "^22.3.0"
isort = "^5.10.1"

[tool.mypy]
plugins = ["sqlmypy"]
exclude = "/migrate/$"
python_version = 3.9
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
#disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
#warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
#show_traceback = true

[[tool.mypy.overrides]]
module = 'aiogram.*'
ignore_missing_imports = true

[tool.isort]
balanced_wrapping = true
default_section = 'THIRDPARTY'
include_trailing_comma = true
known_first_party = ['give_money_bot']
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
