[tool.poetry]
name = "give_money_bot"
version = "1.2.0"
description = ""
authors = ["Platun0v <me@platun0v.ru>"]

[tool.poetry.scripts]
bot = "give_money_bot:main"
squeeze = "give_money_bot.utils.squeezer:squeeze"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
aiogram = "3.0.0b4"
typing-extensions = "^4.2.0"
aiohttp-socks = "^0.7.1"
loguru = "^0.6.0"
SQLAlchemy = "^1.3.23"
alembic = "^1.7.7"
Jinja2 = "^3.1.1"
pydantic = "^1.9.0"
sentry-sdk = "^1.5.11"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
sqlalchemy-stubs = "^0.4"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.mypy]
plugins = ["sqlmypy", "pydantic.mypy"]
exclude = "/migrate/$"
python_version = "3.10"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
#show_traceback = true

[[tool.mypy.overrides]]
module = 'aiogram.*'
ignore_missing_imports = true

[tool.isort]
balanced_wrapping = true
default_section = 'THIRDPARTY'
include_trailing_comma = true
known_first_party = ['give_money_bot']
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
